# download-anime

./: Cargo.toml
src/: downloader.rs  main.rs
