[package]
name = "download-anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
async-std = "1.12.0"
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
