[package]
name = "download-anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

reqwest = "0.12"
select = "0.6"

tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

futures = "0.3"
futures-util = "0.3"
